test/must_fail/api/must_fail_script_self.ref
error: script_self() require exactly 0 arguments but 1 was given
  [must_fail_script_self.ngjs:0:0] in <anonymous>()
    script_self(1);
    ^

hint: function 'script_self()' was called with 1 arguments
hint: argument #0 was 1 (number)

Stack trace (1 frames):
  [must_fail_script_self.ngjs:0:0] in <anonymous>()
    script_self(1);
    ^

exit(7)
