test/must_fail/api/must_fail_script_self.ngjs
#!/usr/bin/env ngspicejs
// no args needed
// linter: ngspicejs-lint
"use strict";

script_self(1);
